sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:23: error: not found: value j
    setValeur(j, v)
              ^