sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort()
{
  var n = getNombreValeurs()-1;
  var v = 0;
  var x = 0;
  var dernier = 0;
  
  for (i <- 1 to n)
  {
    v = getValeur(i);
    dernier = i;
    
    for (j <- i to n)
    {
      x = getValeur(j);
      if (x > v)
      {
        copie(j-1, j);
        dernier = j;
      }
    }
    setValeur(j, v)
  }
}